Rewrite the pref for forbidding pages from setting colors and backgrounds so that it changes transparency less often and interferes less with user and user-agent styles.  b=58048, 255829, 255411  r+sr=bzbarsky